manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: true-tracker
    namespace: true-tracker
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: true-tracker
    ports:
        - name: http
          port: 80
