manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: true-tracker
    namespace: true-tracker
spec:
    rules:
        - host: true-tracker.trueberryless.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: true-tracker
                            port:
                                number: 80

    tls:
        - hosts:
              - true-tracker.trueberryless.org
          secretName: true-tracker
